--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 
 
 	<body>
-		<h1>Bem vindo ao GIT Teste</h1>
+		<video width="320" height="240" controls>
+	  		<source src="movie.mp4" type="video/mp4">
+		  	</object> 
+		</video>
 	
 		
 
