--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
 
 	<body>
-		<h1>Bem vindo ao GIT Teste</h1>
+		<h1>Nilton, aprenda a usar GitHub, pois esta ferramenta lhe proporcionará diversas ferramentas</h1>
+		<BR>
+		<h1>Entre estas ferramentas, poderá enviar mensagens aos seus amigos, #ficadica #gostosão #<3 </h1>
 	
 		
 
