--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 ﻿<!DOCTYPE html>
 <html>
 	<head>		
-		<script src="http://jwpsrv.com/library/9yn0PBgoEeS7ByIAC0MJiQ.js"></script>
+	
 		
 	</head>
 
 
 	<body>
-		<h1>Nilton, aprenda a usar GitHub, pois este site é #foda</h1>
+		<h1>Matheus</h1>
 		<BR>
-		<h1>Entre estas ferramentas, poderá enviar mensagens aos seus amigos, #ficadica #gostosão #<3 </h1>
+		
 	
 		
 
